# analysis-stempel

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: lib.rs  register.rs  stemmer.rs  stop.rs
tests/: stempel_comprehensive.rs
